# Nervous-ECG

./: CHANGELOG.md  README.md
.github/workflows/: build-and-release.yml  build_and_release.yml
firmware/: CMakeLists.txt  README.md  VERSION  overlay-ota.conf  overlay-thread.conf  prj.conf
firmware/boards/arm/ecg_board/: Kconfig.board  Kconfig.defconfig  ecg_board-pinctrl.dtsi  ecg_board.dts  ecg_board.yaml  ecg_board_defconfig
firmware/src/: main.c  measurement.c  measurement.h
firmware/src/bluetooth/: bluetooth.c  bluetooth.h
firmware/src/calendar/: calendar.c  calendar.h
hardware/: README.md
hardware/Casing/: nervous-casing-wrist.f3z
hardware/Export/Assembly/: nervous-ecg-bottom.pos  nervous-ecg-kicad-bom.csv  nervous-ecg-top.pos
hardware/Export/Manufacturing/: nervous-ecg-B_Cu.gbr  nervous-ecg-B_Mask.gbr  nervous-ecg-B_Paste.gbr  nervous-ecg-B_Silkscreen.gbr  nervous-ecg-Edge_Cuts.gbr  nervous-ecg-F_Cu.gbr  nervous-ecg-F_Mask.gbr  nervous-ecg-F_Paste.gbr  nervous-ecg-F_Silkscreen.gbr  nervous-ecg-NPTH-drl_map.gbr  nervous-ecg-NPTH.drl  nervous-ecg-PTH-drl_map.gbr  nervous-ecg-PTH.drl
hardware/Source/: fp-lib-table  nervous-ecg.kicad_pcb  nervous-ecg.kicad_prl  nervous-ecg.kicad_pro  nervous-ecg.kicad_sch  nervous-ecg.kicad_sym  sym-lib-table
hardware/Source/nervous-ecg.pretty/: AD8232ACPZ-R7.kicad_mod  CONN_BAT_53048-0310.kicad_mod  CONN_ELECTRODE.kicad_mod  ISP1807-LR.kicad_mod
web-app/: .gitignore  Makefile  README.md  app.js  index.css  index.html  package.json  proto.js
